# sleap-roots-training

./: .gitignore  LICENSE  README.md  combine_train_test_splits_per_version.ipynb  compare_models_in_registry.ipynb  evaluate_sorghum-primary-2025-01-06.ipynb  make_dataset_registry.ipynb  make_model_registry_fourth.ipynb  make_train_test_splits_first.ipynb  modify_init_configs_second.ipynb  pyproject.toml  separate_different_crops_in_labels.ipynb  sleap_train_with_wandb_third.ipynb  sweep.ipynb  test_sleap_pkg.v000.ipynb
helper_notebooks/: combine_train_test_splits_per_version.ipynb  compare_models_in_registry_pilot.v000.ipynb  evaluate_sorghum-primary-2025-01-06.ipynb  make_dataset_registry.ipynb  modify_init_configs_second.ipynb  separate_different_crops_in_labels.ipynb  sleap_train_with_wandb_third.ipynb  test_sleap_pkg.v000.ipynb
sleap_roots_training/: __init__.py  config.py  config.yaml  datasets.py  evaluate.py  train.py
tests/: test_imports.py
